<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_dropdown"
        android:title=""
        android:icon="@drawable/ic_menu"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/action_create_notification"
                android:icon="@drawable/ic_notification"
                android:title="@string/notification">
            </item>

            <item
                android:id="@+id/action_share_note"
                android:title="@string/share_note"
                android:icon="@drawable/ic_share_grey">
            </item>

            <item
                android:id="@+id/action_delete_note"
                android:title="@string/delete"
                android:icon="@drawable/ic_delete_grey">
            </item>
        </menu>

    </item>
</menu>